--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -39,7 +39,7 @@
                   <label class="form-label">First name</label
                   ><input
                     type="text"
-                    name="firstname"
+                    name="firstName"
                     placeholder="First name"
                     required=""
                     class="form-control"
@@ -49,7 +49,7 @@
                   <label class="form-label">Last name</label
                   ><input
                     type="text"
-                    name="lastname"
+                    name="lastName"
                     placeholder="Last name"
                     required=""
                     class="form-control"
