--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container-lg">
 		<nav class="navbar navbar-expand navbar-dark bg-primary">
-			<a href="/" class="navbar-brand">Project Explorer</a>
+			<a href="index.html" class="navbar-brand">Project Explorer</a>
 			<form method="get" action="/projects" class="form-inline">
 				<input type="text" placeholder="Search Projects" name="search" class="mr-sm-2 form-control">
 				<input type="hidden" name="type" value="Name">
