--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -7,26 +7,33 @@
 
   <body>
     <div class="container-lg">
-        <nav class="navbar navbar-expand navbar-dark bg-primary">
-			<a href="/" class="navbar-brand">Project Explorer</a>
-			<form method="get" action="/projects" class="form-inline">
-				<input type="text" placeholder="Search Projects" name="search" class="mr-sm-2 form-control">
-				<input type="hidden" name="type" value="Name">
-				<button type="submit" class="btn btn-outline-light">Search</button>
-			</form>
-			<div class="mr-auto navbar-nav">
-				<a href="/projects" data-rb-event-key="/projects" class="nav-link">Projects</a>
-				<a href="createProject.html" class="nav-link">Submit</a>
-			</div>
-			<div class="navbar-nav logged-out">
-				<a href="register.html" class="nav-link">Sign up</a>
-				<a href="login.html" class="nav-link">Login</a>
-			</div>
-			<div class="navbar-nav logged-in" style="display:none">
-				<a href="#" id="logout" class="nav-link">Logout</a>
-				<a id="username" class="nav-link">Hi Tola</a>
-			</div>
-		</nav>
+      <nav class="navbar navbar-expand navbar-dark bg-primary">
+        <a href="index.html" class="navbar-brand">Project Explorer</a>
+        <form method="get" action="/projects" class="form-inline">
+          <input
+            type="text"
+            placeholder="Search Projects"
+            name="search"
+            class="mr-sm-2 form-control"
+          />
+          <input type="hidden" name="type" value="Name" />
+          <button type="submit" class="btn btn-outline-light">Search</button>
+        </form>
+        <div class="mr-auto navbar-nav">
+          <a href="/projects" data-rb-event-key="/projects" class="nav-link"
+            >Projects</a
+          >
+          <a href="createProject.html" class="nav-link">Submit</a>
+        </div>
+        <div class="navbar-nav logged-out">
+          <a href="register.html" class="nav-link">Sign up</a>
+          <a href="login.html" class="nav-link">Login</a>
+        </div>
+        <div class="navbar-nav logged-in" style="display: none">
+          <a href="#" id="logout" class="nav-link">Logout</a>
+          <a id="username" class="nav-link">Hi Tola</a>
+        </div>
+      </nav>
 
       <div class="my-3 container">
         <div class="justify-content-center my-5 w-50 mx-auto row">
