--- a/app/public/project-explorer/viewProject.html
+++ b/app/public/project-explorer/viewProject.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container-lg">
       <nav class="navbar navbar-expand navbar-dark bg-primary">
-        <a href="/" class="navbar-brand">Project Explorer</a>
+        <a href="index.html" class="navbar-brand">Project Explorer</a>
         <form method="get" action="/projects" class="form-inline">
           <input
             type="text"
