Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -15,7 +15,7 @@
     <div >
         <form action="" class="form-inline" name="searchForm">
     <input type="text" class="form-control" placeholder="Search Projects">
-    <input type="button" class="btn btn-outline-light search"  value="search">
+    <button type="submit" class="btn btn-outline-light search">Search</button>
     <a href="">Submit</a>
         </form>
     </div>
