Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -30,7 +30,7 @@
         <div class="jumbotron first">
             <h1>Welcome to Project Explorer</h1>
          <p>Project Explorer is a repository for final year projects across all departments at your institution. You can submit your project and search projects submitted by others to learn from.</p>
-         <input type="button" class="btn btn-primary" value="Get Started" name="Get Started">
+         <button type="submit" class="btn btn-primary">Get Started</button>
          <input type="button" class="btn btn-secondary" value="Login" name="Login">
         </div>
         <div class="all-card">
