--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -31,7 +31,7 @@
             <h1>Welcome to Project Explorer</h1>
          <p>Project Explorer is a repository for final year projects across all departments at your institution. You can submit your project and search projects submitted by others to learn from.</p>
          <button type="submit" class="btn btn-primary">Get Started</button>
-         <input type="button" class="btn btn-secondary" value="Login" name="Login">
+         <button type="submit" class="btn btn-secondary">Login</button>
         </div>
         <div class="all-card">
         <div class="card">
