Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -30,8 +30,8 @@
         <div class="jumbotron first">
             <h1>Welcome to Project Explorer</h1>
          <p>Project Explorer is a repository for final year projects across all departments at your institution. You can submit your project and search projects submitted by others to learn from.</p>
-         <button type="submit" class="btn btn-primary">Get Started</button>
-         <button type="submit" class="btn btn-secondary">Login</button>
+         <button type="submit" class="btn btn-primary"><a href="register.html">Get Started</a></button>
+         <button type="submit" class="btn btn-secondary"><a href="login.html">Login</a></button>
         </div>
         <div class="all-card">
         <div class="card">
