Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -30,7 +30,7 @@
     <form class="form-group" action="">
        <label for="email">Email address: </label><input type="email" class="form-control" name="email"><br>
       <label for="password"> Password: </label><input type="password" class="form-control" name="password"><br>
-        <input class="btn btn-primary" type="submit">
+        <button class="btn btn-primary">Login</button>
     </form>
 </div>
 <footer>
