Styled HTML pages for Project Explorer in Bootstrap

--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -78,7 +78,7 @@
 </div>
 </div>
 
-        <input type="submit" class="btn btn-primary" value="Sign Up">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
 </main>
 <footer>
