--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -92,7 +92,7 @@
              </select>
 </div>
 </div>
-             <input type="submit" value="Update Profile" class="btn btn-primary">
+             <button type="submit" class="btn btn-primary">Update Profile</button>
          </form>
     </section>
 
@@ -117,7 +117,7 @@
 </div>
 </div>
 
-        <input type="submit" value="Change Password" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary">Change Password</button>
         </form>
     </section>
 </div>
