--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -49,7 +49,7 @@
 </div>
            
 <div class="form-group">
-            <input type="submit" value="Search" class="btn btn-lg btn-primary">
+            <button type="submit" class="btn btn-lg btn-primary">Submit</button>
 </div>
 </div>
         </form>
