--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -28,7 +28,7 @@
     <section>
         <div class="container">
             <h3>Project Gallery</h3>
-        <form action="" name="searhform" class=" ade bg-light p-3">
+        <form action="" name="searhForm" class=" ade bg-light p-3">
 
             <div class="form-row">
 <div class="form-group">
