--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -28,29 +28,29 @@
     <section>
         <div class="container">
             <h3>Project Gallery</h3>
-        <form action="" name="searhForm" class=" ade bg-light p-3">
 
-            <div class="form-row">
-<div class="form-group">
+        <form action="" name="searchForm" class=" ade bg-light p-3">
+<div class="form-row">
+  <div class="form-group">
             <input type="text" name="searchTerm" placeholder="project Name, Authors, Abstract, Tags" class="form-control form-control-lg">
-</div>
+   </div>
 
-<div class="form-group three">
-<label for="" class="form-label">Search by</label>
-</div>
+   <div class="form-group three">
+      <label for="" class="form-label">Search by</label>
+   </div>
 
-<div class="form-group">
+   <div class="form-group">
          <select name="searchType" class="form-control form-control-lg">
                <option value="Name">Name</option>
                <option value="Abstract">Abstract</option>
                <option value="Authors">Authors</option>
                <option value="Tags">Tags</option>
            </select>
-</div>
+    </div>
            
-<div class="form-group">
+    <div class="form-group">
             <button type="submit" class="btn btn-lg btn-primary">Submit</button>
-</div>
+    </div>
 </div>
         </form>
 
