--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -32,7 +32,7 @@
         <form action="" name="searchForm" class=" ade bg-light p-3">
 <div class="form-row">
   <div class="form-group">
-            <input type="text" name="searchTerm" placeholder="project Name, Authors, Abstract, Tags" class="form-control form-control-lg">
+            <input type="text" name="searchTerm" placeholder="Search project name, authors, abstract, tags" class="form-control form-control-lg">
    </div>
 
    <div class="form-group three">
