--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,83 +9,87 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar nav-bar sticky-top ">
         <div class="left-nav">
             <h3 class="navbar-brand">Project Explorer</h3>
-        <div >
-            <form action="" class="form-inline" name="searchForm">
-        <input type="text" class="form-control" placeholder="Search Projects">
-        <button type="submit" class="btn btn-outline-light search">Search</button>
-        <a href="">Submit</a>
-            </form>
-        </div>
+            <div>
+                <form action="" class="form-inline" name="searchForm">
+                    <input type="text" class="form-control" placeholder="Search Projects">
+                    <button type="submit" class="btn btn-outline-light search">Search</button>
+                    <a href="">Submit</a>
+                </form>
+            </div>
         </div>
         <div class="right-nav">
             <a class="nav-link" href="">Signup</a>
             <a class="nav-link" href="">Login</a>
-            </div>
-</nav>
+        </div>
+    </nav>
     <section>
         <div class="container">
             <h3>Project Gallery</h3>
+            <form action="" name="searhForm" class="bg-light p-3">
 
-        <form action="" name="searchForm" class=" ade bg-light p-3">
-<div class="form-row">
-  <div class="form-group">
-            <input type="text" name="searchTerm" placeholder="Search project name, authors, abstract, tags" class="form-control form-control-lg">
-   </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <input type="text" name="searchTerm" placeholder="project Name, Authors, Abstract, Tags"
+                            class="form-control form-control-lg">
+                    </div>
 
-   <div class="form-group three">
-      <label for="" class="form-label">Search by</label>
-   </div>
+                    <div class="form-group three">
+                        <label for="" class="form-label">Search by</label>
+                    </div>
 
-   <div class="form-group">
-         <select name="searchType" class="form-control form-control-lg">
-               <option value="Name">Name</option>
-               <option value="Abstract">Abstract</option>
-               <option value="Authors">Authors</option>
-               <option value="Tags">Tags</option>
-           </select>
-    </div>
-           
-    <div class="form-group">
-            <button type="submit" class="btn btn-lg btn-primary">Submit</button>
-    </div>
-</div>
-        </form>
+                    <div class="form-group">
+                        <select name="searchType" class="form-control form-control-lg">
+                            <option value="Name">Name</option>
+                            <option value="Abstract">Abstract</option>
+                            <option value="Authors">Authors</option>
+                            <option value="Tags">Tags</option>
+                        </select>
+                    </div>
 
-    <section>
-        <p><span style="font-weight: bold; font-size: 20px;">All Projects</span>(0 results)</p>
-    
-        <div class="all-card">
-        <div class="card" style="width: 20%;">
-            <div class="card-body">
-                <h4 class="card-title">Project Title</h4>
-                <h6 class="card-subtitle">Author 1, Author 2</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <div class="second">
-          <p class="html">#html</p>
-          <p class="css">#css</p>
-          <p class="javascript">#javascript</p>
-        </div>
-            </div>
-        </div> 
-
-        <div class="card" style="width: 20%;">
-            <div class="card-body">
-                <h4 class="card-title">Project Title </h4>
-                <h6 class="card-subtitle">Author 1, Author 2</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <div class="second">
-                <p class="html">#html</p>
-                <p class="css">#css</p>
-                <p class="javascript">#javascript</p>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-lg btn-primary">Submit</button>
+                    </div>
                 </div>
-              </div>
-            </div>
-        </div>
-    </section>
+            </form>
+
+            <section>
+                <p><span style="font-weight: bold; font-size: 20px;">All Projects</span>(0 results)</p>
+
+                <div class="all-card">
+                    <div class="card" style="width: 20%;">
+                        <div class="card-body">
+                            <h4 class="card-title">Project Title</h4>
+                            <h6 class="card-subtitle">Author 1, Author 2</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="second">
+                                <p class="html">#html</p>
+                                <p class="css">#css</p>
+                                <p class="javascript">#javascript</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 20%;">
+                        <div class="card-body">
+                            <h4 class="card-title">Project Title </h4>
+                            <h6 class="card-subtitle">Author 1, Author 2</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <div class="second">
+                                <p class="html">#html</p>
+                                <p class="css">#css</p>
+                                <p class="javascript">#javascript</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </section>
 
@@ -94,4 +99,5 @@
         </div>
     </footer>
 </body>
+
 </html>
