--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -28,9 +28,9 @@
         </div>
     </nav>
     <section>
-        <div class="container">
+        <div class="container bg-light">
             <h3>Project Gallery</h3>
-            <form action="" name="searhForm" class="bg-light p-3">
+            <form action="" name="searhForm" class="p-3">
 
                 <div class="form-row">
                     <div class="form-group">
